--- a/templates/locals/track-grid.html
+++ b/templates/locals/track-grid.html
@@ -4,7 +4,7 @@
 			<h3>{{ title }}</h3>
 		</div>
 	</li>
-	<li class="grid-for-search" v-for="data in res.data">
+	<li class="grid-for-search" v-for="data in tracks.data">
 		<div>
 			<img :src="data.album.cover_small" class="search-cover-img" alt="">
 		</div>
