--- a/templates/pages/artist.html
+++ b/templates/pages/artist.html
@@ -9,7 +9,7 @@
 				<div id="picture-side">
 					<div id="picture-side-top">
 						<h1>{{ artist.name }}</h1>
-						<span>{{ artist.nb_fan }} fans, {{ artist.nb_album }} albums</span>
+						<span>{{ artist.nb_fan }} fans</span>
 					</div>
 					<div id="picture-side-bottom">
 						<div @click="">
