--- a/templates/pages/album.html
+++ b/templates/pages/album.html
@@ -1,16 +1,18 @@
 <div id="artist">
-	<img :src="album.cover_big" alt="">
+	<img :src="album.cover_medium" alt="">
 	<div>
 		<div>
-			<h2>{{ album.title }}</h2>
-			<h2>{{ artist.name }}</h2>
+			<h1>{{ album.title }}</h1>
+			<div class="flex align-center">
+				<img :src="artist.picture_small" class="radius-50pc" alt="">
+				<h2>{{ artist.name }}</h2>
+			</div>
 		</div>
 		<div>
 			<span>{{ album.nb_tracks }} titres</span>
-			<span>{{ album.fans }} fans</span>
-			<span>{{ album.release_date }}</span>
-			<span>{{ album.duration | duration }}min</span>
+			<span>- {{ album.duration | duration(true) }}</span>
+			<span>- {{ album.release_date }}</span>
+			<span>- {{ album.fans }} fans</span>
 		</div>
 	</div>
-	
 </div>	
