--- a/templates/pages/artist.html
+++ b/templates/pages/artist.html
@@ -6,7 +6,7 @@
 				<div id="picture-artist">
 					<img :src="artist.picture_medium" alt="">
 				</div>
-				<div id="picture-side">
+				<div id="picture-side"  class="tiny-font">
 					<div id="picture-side-top">
 						<h1>{{ artist.name }}</h1>
 						<span>{{ artist.nb_fan }} fans</span>
