--- a/templates/pages/album.html
+++ b/templates/pages/album.html
@@ -1,18 +1,20 @@
-<div id="artist">
-	<img :src="album.cover_medium" alt="">
-	<div>
-		<div>
-			<h1>{{ album.title }}</h1>
-			<div class="flex align-center">
-				<img :src="artist.picture_small" class="radius-50pc" alt="">
-				<h2>{{ artist.name }}</h2>
+<div id="album">
+	<div id="album-header" class="flex">
+		<img :src="album.cover_medium" alt="">
+		<div class="flex flex-column justify-between">
+			<div>
+				<h1>{{ album.title }}</h1>
+				<div class="flex align-center">
+					<img :src="artist.picture_small" class="radius-50pc" alt="">
+					<h2>{{ artist.name }}</h2>
+				</div>
+			</div>
+			<div class="tiny-font">
+				<span>{{ album.nb_tracks }} titres</span>
+				<span>- {{ album.duration | duration(true) }}</span>
+				<span>- {{ album.release_date }}</span>
+				<span>- {{ album.fans }} fans</span>
 			</div>
 		</div>
-		<div>
-			<span>{{ album.nb_tracks }} titres</span>
-			<span>- {{ album.duration | duration(true) }}</span>
-			<span>- {{ album.release_date }}</span>
-			<span>- {{ album.fans }} fans</span>
-		</div>
 	</div>
-</div>	
+</div>		
