--- a/css/artist.css
+++ b/css/artist.css
@@ -30,7 +30,8 @@
 	bottom: 0;
 	left: 0;
 	right: 0;
-	background-color: rgba(3, 7, 20, 0.4);
+	background-color: #000000;
+	opacity: 0.35;
 }
 #header-bottom {
 	display: flex;
