--- a/templates/locals/track-grid.html
+++ b/templates/locals/track-grid.html
@@ -8,7 +8,7 @@
 		</li>
 		<li :class="{ 'grid-for-search': !mode, 'grid-for-album': mode }" v-for="data, i in tracks.data">
 			<div v-if="!mode">
-				<img :src="data.album.cover_small" class="search-cover-img" alt="">
+				<img :src="data.album.cover_small" class="search-cover-img" alt="" @click="$root.play('track', data.id)">
 			</div>
 			<div v-else>{{ i + 1 }}</div>
 			<div class="fav-heart">
@@ -18,7 +18,7 @@
 				</transition>
 			</div>
 			<div class="ellipsis">
-				<router-link class="title-link" :to="'/track/' + data.id">{{ data.title_short }}</router-link>
+				<router-link class="title-link" :to="{name: 'track', params: {id: data.id}}">{{ data.title_short }}</router-link>
 			</div>
 			<div  v-if="!mode" class="ellipsis">
 				<router-link class="artist-link" :to="'/artist/' + data.artist.id">{{ data.artist.name }}</router-link>
