--- a/templates/pages/artist.html
+++ b/templates/pages/artist.html
@@ -15,7 +15,7 @@
 						<div @click="">
 							<span class="fa fa-heart"></span>
 							<span class="fa fa-heart-o"></span>
-							<span>Ajouter</span>
+							<span @click="$root.addOrRemoveFav(artist)">Ajouter</span>
 						</div>
 						<div>
 							Partager
