--- a/templates/pages/album.html
+++ b/templates/pages/album.html
@@ -1,6 +1,6 @@
 <div id="album" v-if="!$root.loading">
 	<div id="album-header" class="flex">
-		<img class="mr-2" :src="album.cover_medium" alt="" @click="$root.initWidget('album', album.id)">
+		<img class="mr-2" :src="album.cover_medium" alt="" @click="$root.initWidget(album)">
 		<!-- <img v-if="!/artist\/\//.test(album.cover_medium)" class="mr-2" :src="album.cover_medium" alt="" @click="$root.initWidget('album', album.id)"> -->
 		<div class="flex flex-column justify-around">
 			<div>
