--- a/css/tabs-menu.css
+++ b/css/tabs-menu.css
@@ -55,7 +55,14 @@
 #tabs-titles li.active::after {
 	right: var(--pad-li-side);
 }
-
-#tabs-menu > section > *{
+#tabs-menu > section {
+	position: relative;
+}
+#tabs-menu > section > * {
 	position: absolute;
+	top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+	padding: 2rem;
 }
