--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,3 +1,5 @@
-<div id="home">
-	<h1>Welcome to you, you can search for things if u want</h1>
+<div id="home" class="p-5">
+	<h1>Bienvenue !</h1>
+	<hr>
+	<p>Ce projet utilise l'API Deezer afin de faire des recherches de musiques, d'artistes et d'albums. <br> Délibérément imité, ce n'est toutefois pas la plateforme officielle ! <br><br> Pour profiter pleinement de l'expérience, assurez-vous d'être connecté à Deezer: vous ne serez ainsi pas limité aux 30 secondes d'écoute par pistes. <br><br> Faites une recherche, ajoutez des favoris, et écoutez de la musique (presque) comme sur Deezer ! <br> Vos favoris seront ajoutés localement sur votre session, mais pas sur votre compte Deezer. Vous les retrouverez à votre retour (Si vous revenez ;) ) <br><br> Vous pouvez supprimer toute trace de vos favoris à tout moment en cliquant sur "vider le cache" en bas à droite de l'écran. <br><br> Bonne visite !</p>
 </div>
